--- a/public/admin/app-assets/css-rtl/components.css
+++ b/public/admin/app-assets/css-rtl/components.css
@@ -17,6 +17,50 @@ html body p {
   line-height : 1.5rem;
 }
 
+.click-add-res span {
+  border: 1px  solid #70C099;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  vertical-align: middle;
+  text-align: center;
+  color: #70C099;
+  border-radius: 3px;  
+  margin-left: 10px;
+  position: relative;
+}
+.click-minus span  {
+  line-height: 0px;
+
+}
+
+.click-minus-two span{
+  line-height: 0px;
+
+}
+.click-add-res {
+  color: #70C099;
+  font-size: 18px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  width: 15%;
+}
+.add-divs{
+  margin: 40px 0px;
+}
+
+.shep-div  {
+  background: #E6E6E6;
+  height: 1px;
+  display: inline-block;
+  width: 84%;
+  vertical-align: middle;
+}
+
 html .content {
   padding : 0;
   position : relative;
